# evograph

./: .env.example  .gitignore  CLAUDE.md  MVP.md  Makefile  README.md  ROADMAP.md  TODO.md  docker-compose.prod.yml  docker-compose.yml  render.yaml
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/src/data/processed/graph/: edges.json  nodes.json
apps/api/src/evograph/: logging_config.py  main.py  settings.py  worker.py
apps/api/src/evograph/api/routes/: graph.py  jobs.py  search.py  sequences.py  species.py  stats.py  taxa.py
apps/api/src/evograph/db/: models.py  session.py
apps/api/src/evograph/middleware/: rate_limit.py  request_logging.py  security_headers.py
apps/api/src/evograph/pipeline/: backfill_extinct.py  backfill_lineage.py  backfill_ncbi_tax_id.py  build_graph_export.py  build_kmer_index.py  build_neighbors.py  dedup_sequences.py  ingest_bold.py  ingest_images.py  ingest_ncbi.py  ingest_ott.py  select_canonical.py  validate.py
apps/api/src/evograph/services/: bold_client.py  cache.py  kmer_index.py  mi_distance.py  neighbor_index.py  ott_client.py
apps/api/src/evograph/tasks/: pipeline_tasks.py
apps/api/src/evograph/utils/: alignment.py  fasta.py
apps/api/tests/: conftest.py  test_backfill_ncbi.py  test_dedup_sequences.py  test_graph.py  test_health.py  test_ingest_ncbi.py  test_kmer_index.py  test_logging_config.py  test_mi_distance.py  test_pipeline.py  test_rate_limit.py  test_request_logging.py  test_search.py  test_security_headers.py  test_sequences.py  test_species.py  test_stats.py  test_taxa.py  test_validate.py
(+47 files in other folders)
