[project]
name = "evograph"
version = "0.1.0"
description = "EvoGraph MVP - Evolutionary similarity graph"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "alembic>=1.14",
    "httpx>=0.28",
    "parasail>=1.3",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "faiss-cpu>=1.8",
    "numpy>=1.26",
    "celery[redis]>=5.4",
    "redis>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/evograph"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 120
